--- a/front-end-next/package.json
+++ b/front-end-next/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "flowbite": "^2.2.1",
+    "flowbite-react": "^0.7.2",
     "next": "14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
